reinventamos la rueda en varias cosas, las saco pero no puedo hacer andar un test