@@ -49,14 +49,7 @@ public class Incidente {
 
         ArrayList<Usuario> usuariosRegistrados = RepositorioUsuarios.getUsuariosRegistrados();
 
-        List<Usuario> usuariosInteresadosEnServicio = usuariosRegistrados.stream().filter(usuario->usuario.teInteresa(servicioAfectado)).collect(Collectors.toList());
-
-        List<Usuario> interesadosPorComunidadEnComun = usuariosRegistrados.stream().filter(usuario->usuario.estasEn(comunidadDondeSeReporta)).toList(); //le saco la lista de roles al usuario y la comunidad de esa lista de roles. Me fijo si es compatible la comunidad con la comunidad del usuario que reportó
-
-        ArrayList<Usuario> usuariosInteresados = new ArrayList<>(usuariosInteresadosEnServicio);
-
-        usuariosInteresados.addAll(interesadosPorComunidadEnComun);
-
+        ArrayList<Usuario> usuariosInteresados = (ArrayList<Usuario>) usuariosRegistrados.stream().filter(usuario->usuario.teInteresa(this)).collect(Collectors.toList());
 
         if(usuariosInteresados.contains(usuarioReportador)) {
             usuariosInteresados.remove(usuarioReportador);
